fix text spacing in cards

--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,14 @@ body main #photographers_section .photographer_card {
   margin: 2em 0 2em 0;
 }
 
+body main #photographers_section .photographer_card .photographer_info, body main #photographers_section .photographer_card .photographer_location, body main #photographers_section .photographer_card .photographer_tagline, body main #photographers_section .photographer_card .photographer_price {
+  margin: 0.5em 0 0.5em 0;
+}
+
+body main #photographers_section .photographer_card .photographer_name {
+  margin: 0.5em 0 0 0;
+}
+
 body main #photographers_section .photographer_card .tags_links {
   padding: 0;
 }
